[gd_scene load_steps=20 format=3 uid="uid://x41te8lnyl25"]

[ext_resource type="Script" uid="uid://d10tos5ck864w" path="res://Scenes/Levels/bonus.gd" id="1_kdyfc"]
[ext_resource type="PackedScene" uid="uid://cn8sdnujheecg" path="res://Scenes/Levels/level_!.tscn" id="1_yqn8f"]
[ext_resource type="PackedScene" uid="uid://dqtr6ragx81l8" path="res://Scenes/player/player.tscn" id="2_yjtcc"]
[ext_resource type="PackedScene" uid="uid://wtjni4xuikn" path="res://Scenes/spawner/music_spawner.tscn" id="3_kdyfc"]
[ext_resource type="Script" uid="uid://dip2t2xbd6qul" path="res://Scenes/main/control.gd" id="4_bn5x7"]
[ext_resource type="Texture2D" uid="uid://b6sumniionvmf" path="res://Assets/ui/health_bar.png" id="5_qh7jm"]
[ext_resource type="Texture2D" uid="uid://dv4xvcdfyya0w" path="res://Assets/ui/Sprite-0022bar.png" id="6_j0elo"]
[ext_resource type="Texture2D" uid="uid://befkvdvcqk4y6" path="res://Assets/player/player_w.png" id="7_qooba"]
[ext_resource type="Texture2D" uid="uid://bq84tcawl88uk" path="res://Assets/ui/empty_shoot_bar.png" id="8_dlsib"]
[ext_resource type="Texture2D" uid="uid://bi83jv7m7fthy" path="res://Assets/ui/shoot_bar.png" id="9_c0xrf"]
[ext_resource type="Texture2D" uid="uid://bdaw3sog5vunj" path="res://Assets/boss/emogi_boss1.png" id="10_xw10k"]
[ext_resource type="FontFile" uid="uid://dalk1d1r8dnpb" path="res://Assets/ui/Stacked pixel.ttf" id="11_u5iip"]
[ext_resource type="PackedScene" uid="uid://rtfuowcitca0" path="res://Scenes/Entity/timer_tunnner.tscn" id="12_08xqw"]
[ext_resource type="Texture2D" uid="uid://3b2w1mfmpp24" path="res://Assets/ui/pause.png" id="13_q06fg"]
[ext_resource type="Texture2D" uid="uid://bkg6hnfno4p3j" path="res://Assets/ui/play.png" id="14_frv1d"]
[ext_resource type="PackedScene" uid="uid://d23nmq4pe64c1" path="res://Scenes/spawner/notes.tscn" id="15_rwi7y"]
[ext_resource type="Script" uid="uid://b0opl8i3tqsf" path="res://Scenes/main/camera_2d.gd" id="16_rt75o"]
[ext_resource type="AudioStream" uid="uid://sy8yj7nv33ym" path="res://music/Survival mode.mp3" id="18_bn5x7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bn5x7"]
radius = 85.0
height = 284.0

[node name="bonus" type="Node2D"]
script = ExtResource("1_kdyfc")

[node name="level_1" parent="." instance=ExtResource("1_yqn8f")]
position = Vector2(2, 1)

[node name="player" parent="level_1" instance=ExtResource("2_yjtcc")]
position = Vector2(44, 25)
scale = Vector2(0.6, 0.6)

[node name="Marker2D2" type="Marker2D" parent="level_1/player"]
unique_name_in_owner = true

[node name="music spawner" parent="level_1" instance=ExtResource("3_kdyfc")]
position = Vector2(-16, -15)

[node name="UI" type="Control" parent="level_1" groups=["UI"]]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = 240.0
offset_right = 285.0
offset_bottom = 632.0
script = ExtResource("4_bn5x7")
metadata/_edit_use_anchors_ = true

[node name="player_health" type="TextureProgressBar" parent="level_1/UI"]
layout_mode = 0
offset_left = 40.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 76.0
value = 100.0
texture_under = ExtResource("5_qh7jm")
texture_progress = ExtResource("6_j0elo")

[node name="player_emote" type="Sprite2D" parent="level_1/UI"]
position = Vector2(20, 60)
texture = ExtResource("7_qooba")
flip_h = true

[node name="shoot_bar" type="TextureProgressBar" parent="level_1/UI"]
layout_mode = 0
offset_left = 40.0
offset_top = 101.0
offset_right = 200.0
offset_bottom = 117.0
texture_under = ExtResource("8_dlsib")
texture_progress = ExtResource("9_c0xrf")

[node name="boss_health" type="TextureProgressBar" parent="level_1/UI"]
layout_mode = 0
offset_left = 801.98
offset_top = 60.0
offset_right = 1041.98
offset_bottom = 76.0
value = 100.0
fill_mode = 1
texture_under = ExtResource("5_qh7jm")
texture_progress = ExtResource("6_j0elo")

[node name="boss_emot_1" type="Sprite2D" parent="level_1/UI"]
position = Vector2(1081.19, 61.19)
scale = Vector2(2.4, 2.464)
texture = ExtResource("10_xw10k")

[node name="RichTextLabel" type="RichTextLabel" parent="level_1/UI"]
layout_mode = 0
offset_left = 804.0
offset_top = 16.0
offset_right = 1014.0
offset_bottom = 43.0
scale = Vector2(1.63, 1.63)
theme_override_fonts/normal_font = ExtResource("11_u5iip")
bbcode_enabled = true
text = "
[wave amp=30 freq=2]Mr _Someone

"
scroll_active = false

[node name="timer_tunnner" parent="level_1/UI" instance=ExtResource("12_08xqw")]
position = Vector2(50, 199)
scale = Vector2(0.69, 0.69)

[node name="esc" type="TextureButton" parent="level_1/UI"]
process_mode = 3
layout_mode = 0
offset_left = 838.0
offset_top = 142.0
offset_right = 892.0
offset_bottom = 166.0
scale = Vector2(4.01, 4.01)
button_mask = 7
texture_normal = ExtResource("13_q06fg")
ignore_texture_size = true

[node name="play" type="TextureButton" parent="level_1/UI"]
process_mode = 3
layout_mode = 0
offset_left = 840.0
offset_top = 251.0
offset_right = 895.0
offset_bottom = 291.0
scale = Vector2(4, 4)
texture_normal = ExtResource("14_frv1d")

[node name="notes" parent="." instance=ExtResource("15_rwi7y")]
position = Vector2(466, 600)

[node name="up2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(466, 280)

[node name="down2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(566, 280)

[node name="left2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(666, 280)

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
position = Vector2(560, 309)
script = ExtResource("16_rt75o")

[node name="Timer" type="Timer" parent="Camera2D"]

[node name="shoot_points" type="Marker2D" parent="."]
position = Vector2(1091, 106)

[node name="bullet" type="Timer" parent="."]
autostart = true

[node name="game over" type="Timer" parent="."]
wait_time = 128.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_bn5x7")
autoplay = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1036, 114)
shape = SubResource("CapsuleShape2D_bn5x7")

[node name="bullet_speed" type="Timer" parent="."]
wait_time = 99.0
autostart = true

[connection signal="pressed" from="level_1/UI/esc" to="level_1/player" method="_on_esc_pressed"]
[connection signal="pressed" from="level_1/UI/esc" to="level_1/UI" method="_on_esc_pressed"]
[connection signal="pressed" from="level_1/UI/play" to="level_1/UI" method="_on_play_pressed"]
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="timeout" from="bullet" to="." method="_on_bullet_timeout"]
[connection signal="timeout" from="game over" to="." method="_on_game_over_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="bullet_speed" to="." method="_on_bullet_speed_timeout"]
